# algebraic

./: Cargo.toml  README.md
algebraic/: Cargo.toml
algebraic-gen/: Cargo.toml  LICENSE  README.md
algebraic-gen/src/: algebra_gen.rs  algebra_generation.rs  lib.rs
algebraic/src/: lib.rs  multi_vector.rs  trait_for_arrays.rs  unit_tests.rs
algebraic/src/multi_vector/: algebra_dimension_0.rs  algebra_dimension_1.rs  algebra_dimension_2.rs  algebra_dimension_3.rs  algebra_dimension_4.rs  algebra_dimension_5.rs  algebra_dimension_6.rs
