[package]
name = "algebraic-gen"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["geometric-algebra", "math", "clifford", "algebra", "hyper-complex"]
repository = "https://github.com/Vollkornaffe/algebraic"
description = "Procedural Macro for Geometric Products of Any Dimension"
categories = ["mathematics" ,"no-std"]
publish = ["algebraic-gen"]
authors = ["Vollkornaffe <vollkornaffe@gmail.com>"]

[lib]
path = "./src/lib.rs"
proc-macro = true

[dependencies]
syn = { version = "1", features = ["full"] }
quote = "1"
