[package]
name = "algebraic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
algebraic-gen = { path = "../algebraic-gen" }

[dev-dependencies]
generic-tests = "0.1.2"
rand_core = "0.6.4"
rand_chacha = "0.3.1"
